# generative-xyz-moderator

./: .env.example  .env.production  .env.sample  .gitignore  .gitlab-ci.yml  Dockerfile  GUIDockerfileUbuntu  Makefile  README copy.md  README.md  ai-school.Dockerfile  artist_balance_1.csv  bk-1000002-proccessing-images.json  bk-project-1002524.json  bk10002images.json  docker-compose.yml  go.mod  go.sum  index.html  keys-4.json  main.go  meta.json  projects.json  report-gm.json  startup.sh  test.json  tmp-report.json  token-thumbnail.json  worker-pubsub.Dockerfile
.github/workflows/: build-and-cache.yaml  ci.yaml  develop.yaml  production-worker-pubsub.yaml  production.yaml
api/: api.pb.go  api.pb.gw.go  api.swagger.json  api_grpc.pb.go  auth.pb.go  auth.pb.validate.go  auth.swagger.json  boilerplate.pb.go  boilerplate.pb.validate.go  boilerplate.swagger.json  health.pb.go  health.pb.validate.go  health.swagger.json  rendered-nft.pb.go  rendered-nft.pb.validate.go  rendered-nft.swagger.json  template.pb.go  template.pb.validate.go  template.swagger.json  token.pb.go  token.pb.validate.go  token.swagger.json
cmd/: main.go
docs/: docs.go  swagger.json  swagger.yaml
pkg/: const.go
pkg/log/: log.go
projects/: airdrop.json  airdrop_status2.json
proto/: api.proto  auth.proto  health.proto  rendered-nft.proto  template.proto  token.proto
swaggerUI/: api.swagger.json  index.html
tools/: factory.go  main.go
utils/: const.go  query_builder.go  query_parser.go  utils.go  utils_test.go
utils/thumbor/: BUILD.bazel  config.go  thumbor.go  thumbor_test.go  wire.go
(+532 files in other folders)
